Finalize JWT auth, roles, and method-level security