@@ -1,5 +1,8 @@
 package com.anu.aijobmatching.security;
 
+import java.util.List;
+
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -7,8 +10,6 @@ import org.springframework.stereotype.Service;
 
 import com.anu.aijobmatching.user.User;
 import com.anu.aijobmatching.user.UserRepository;
-
-import io.jsonwebtoken.lang.Collections;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -25,7 +26,7 @@ public class CustomUserDetailsService implements UserDetailsService {
                 .orElseThrow(() -> new UsernameNotFoundException("User not found:" + emaString));
 
         return new org.springframework.security.core.userdetails.User(user.getEmail(), user.getPasswordHash(),
-                Collections.emptyList());
+                List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name())));
     }
 
 }
